--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ nav.third>ul:last-child>li:nth-of-type(2)>ul>li>a:hover{
     transition: transform 300ms
 }
 /* Hovers */
-.hero-section>aside:first-child>table a:focus::after
+.hero-section>aside:first-child>table a:focus::after,
 .hero-section>aside:first-child>table a:hover::after{
     transform: translate3d(0,0,0);
 }
