--- a/Products-page/style.css
+++ b/Products-page/style.css
@@ -2429,7 +2429,9 @@ footer table>tbody a:focus{
 /*Phone-------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 768px) {
-  *{
+  body{
+      overflow-x: hidden;
+    *{
         font-size: .98em;
     }
     nav.first,
